--- a/src/app/add-course/add-course.component.html
+++ b/src/app/add-course/add-course.component.html
@@ -1,31 +1,36 @@
 <div class="container">
     <div class="row">
+        
         <div class="col col-12 col-12 col-sm-12 col-mg-12 col-lg-12 col-xl-12 col-xxl-12">
+            <form #addcourse="ngForm" (ngSubmit)="Addcourse()">
             <div class="row g-3">
+                
                 <div class="col col-12 col-sm-6 col-mg-6 col-lg-6 col-xl-6 col xxl-6">
                     <label for="" class="form-label">Course Title</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" name="courseTitle" placeholder="title" [(ngModel)]="course.courseTitle">
                 </div>
                 <div class="col col-12 col-sm-6 col-mg-6 col-lg-6 col-xl-6 col xxl-6">
                     <label for="" class="form-label">Duration</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" name="courseDuration" [(ngModel)]="course.courseDuration">
                 </div>
                 <div class="col col-12 col-sm-12 col-mg-12 col-lg-12 col-xl-12 col xxl-12">
                     <label for="" class="forn-label">Description</label>
-                    <textarea name="" id="" cols="30" rows="5" class="form-control"></textarea>
+                    <textarea name="courseDescription" id="" cols="30" rows="5" class="form-control" [(ngModel)]="course.courseDescription"></textarea>
                 </div>
                 <div class="col col-12 col-sm-6 col-mg-6 col-lg-6 col-xl-6 col xxl-6">
                     <label for="" class="form-label">Venue</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" name="courseVenue" [(ngModel)]="course.courseVenue">
                 </div>
                 <div class="col col-12 col-sm-6 col-mg-6 col-lg-6 col-xl-6 col xxl-6">
                     <label for="" class="form-label">Date</label>
-                    <input type="text" class="form-control">
+                    <input type="date" class="form-control" name="courseDate" [(ngModel)]="course.courseDate">
                 </div>
                 <div class="col col-12 col-sm-6 col-mg-6 col-lg-6 col-xl-6 col xxl-6">
-                    <button class="btn btn-primary">Register</button>
+                    <button class="btn btn-primary">Submit</button>
                 </div>
+            
             </div>
+            </form>
         </div>
     </div>
 </div>
